--- a/landing.css
+++ b/landing.css
@@ -1,16 +1,236 @@
 @font-face {
-    font-family: Roboto;
+    font-family: Roboto-basic;
     src: url('Roboto/Roboto-Regular.ttf');
+}
+
+@font-face {
+    font-family: Roboto-light-italic;
+    src: url('Roboto/Roboto-LightItalic.ttf');
+}
+
+@font-face {
+    font-family: Roboto-bold;
+    src: url('Roboto/Roboto-Bold.ttf');
+}
+
+@font-face {
+    font-family: Roboto-light;
+    src: url('Roboto/Roboto-Light.ttf');
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 
 body {
     width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     font-family: Roboto;
+    display: flex;
+    flex-direction: column;
+}
+
+header, footer {
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+}
+
+header {
+    justify-content: space-between;
+    padding-left:15%;
+    padding-right: 15%;
+    
+    padding-top: 10px;
+    
+}
+
+span {
+    font-size: 24px;
+    color:#FAF9F8;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 0;
+    margin: 0;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 10px;
+}
+
+h1 {
+    font-size: 48px;
+    font-family: Roboto-bold;
+    font-weight: 900;
+    color: #FAF9F8;
+}
+
+
+#first {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 15%;
+    padding-right: 15%;
+    align-items: center;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    gap: 30px;
+    
+}
+
+#big_picture {
+    display: flex;
+    width: 30vw;
+    height: auto;
+    
+    
+}
+
+.small_picture {
+    display: flex;
+    width: 10vw;
+    height: 10vw;
+    border-radius: 3px;
+}
+
+#left {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-basis: 450px;
+    gap: 10px;
+}
+
+#left p {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    display: flex;
+    border-radius: 5px;
+    padding: 5px 10px;
+    width: 120px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #3882F6 ;
+    outline: none;
+    font-weight: 700;
+    margin:0;
+    border: none;
+    
+}
+
+h2 {
+    font-size: 32px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+#second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+#container {
+    display: flex;
+    padding: 30px;
+    gap:30px;
+    justify-content: center;
+    
+}
+
+.subsection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    flex-basis: 135px;
+    text-align: center;
+    text-wrap: wrap;
+    gap: 10px;
+
+}
+
+#third {
+    background-color: #E5E7EB;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    padding-top: 5%;
+    padding-bottom:5%;
+    
+
+}
+
+#quote {
+    width: 57%;
+}
+
+#quote p {
+    font-family: Roboto-light-italic;
+    font-size: 36px;
+    color: #1F2937;
+    text-align: left;
+   
+    
+}
+#third h6 {
+    text-align: right;
+}
+
+#blue {
+    background-color: #3882F6;
+    border-radius: 3px ;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 70px;
+    color: #E5E7EB;
+}
+
+#fourth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+h5 {
+    font-family: Roboto-bold;
+}
+
+#fourth button {
+    border: 1px solid white;
+}
+
+.small {
+    font-family: Roboto-light;
+    font-size: 12px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
